--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   outline: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 /* Variables y fuentes */
@@ -23,7 +24,7 @@
 /* Estilos web */
 :root{
   --color0: White;
-  --color1: rgb(54, 54, 54);
+  --color1: rgb(42, 42, 42);
   --color2: Grey;
   --color3: rgb(255, 255, 0);
   --fuente1: "fuente1";
@@ -43,6 +44,7 @@ h2{
     font-size: 1.8rem;
     font-family: var(--fuente2);
     font-weight: 100;
+    margin-top: 4rem;
 }
 h3{
     color: var(--color1);
@@ -67,6 +69,7 @@ p{
     padding: 0.5rem 2rem;
     border-radius: 0.5rem;
     border: 1px solid var(--color1);
+    cursor: pointer;
 }
 
 .boton:hover{
@@ -80,6 +83,8 @@ p{
     transition: 0.1s;
 }
 
+/* Cajas Principales */
+
 nav,header,main,footer{
    width: 100%; 
    max-width: 2560px;
@@ -89,7 +94,30 @@ nav,header,main,footer{
    align-items: flex-start;
 
 }
-/* Estilos del Nav */
+
+section, article{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-direction: flex-start;
+}
+section{
+    margin-top: 2rem;
+}
+article{
+    margin-top: 1rem;
+    row-gap: 1rem;
+}
+.anchoEstrecho{
+    max-width: 1200px;
+    width: 95%;
+}
+/* Nav */
+nav{
+    position: fixed;
+    z-index: 100;
+}
 nav .sup{
     width: 100%;
     height: 5vh;
@@ -138,6 +166,7 @@ nav .inf a:hover{
 
 /* Estilos del Header */
 header{
+    transform: translateY(80px);
     height: 90vh;
     background-image: url("../img/header_2560.jpg");
     background-size: cover;
@@ -160,16 +189,16 @@ header .contenedor{
 
 }
 header .contenedor :nth-child(1){
-    font-size: 7.8vw;
-    line-height: 7.2vw;
+    font-size: 7.9vw;
+    line-height: 7.6vw;
 }
 header .contenedor :nth-child(2){
-    font-size: 5.1vw;
-    line-height: 4vw;
+    font-size: 5vw;
+    line-height: 4.8vw;
 }
 header .contenedor :nth-child(3){
     font-size: 12.5vw;
-    line-height: 10.3vw;
+    line-height: 11.3vw;
 }
 header .contenedor :nth-child(4){
     font-size: 4.1vw;
@@ -177,15 +206,15 @@ header .contenedor :nth-child(4){
 }
 header .contenedor :nth-child(5){
     font-size: 8.1vw;
-    line-height: 6vw;
+    line-height: 7.5vw;
 }
 header .contenedor :nth-child(6){
     font-size: 6.1vw;
-    line-height: 5.3vw;
+    line-height: 5.5vw;
 }
 header .contenedor :nth-child(7){
     font-size: 16.5vw;
-    line-height: 15vw;
+    line-height: 14vw;
 }
 header .contenedor :nth-child(8){
     font-size: 3vw;
@@ -193,7 +222,7 @@ header .contenedor :nth-child(8){
 }
 /* MAIN */
 /* ID SECTPRESENTACION */
-#sectpresentacion{
+/* #sectpresentacion{
     background-color: fuchsia;
     width: 100%;
     display: flex;
@@ -213,7 +242,7 @@ header .contenedor :nth-child(8){
     align-items: center;
     justify-content: flex-start;
     row-gap: 2rem;
-}
+} */
 #contenedorservicios{
     width: 100%;
     display: flex;
@@ -251,4 +280,31 @@ header .contenedor :nth-child(8){
 #contenedorservicios .servicio .contenedor_foto img:hover{
     filter: saturate(1);
     transform:scale(1.2);
+}
+/* Seccion Album */
+/* Articulo SLIDER */
+#slider{
+    width: 100%;
+    /* max-width: 2560px; */
+    height: 90vh;
+    position: relative;
+}
+#slider :nth-child(1), #slider :nth-child(2){
+    width: 150px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: .5;
+    cursor: pointer;    
+}
+#slider :nth-child(1){
+    left: 2rem;
+}
+#slider :nth-child(2){
+    right: 2rem;
+}
+#fotoActiva{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
