--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,3 +308,54 @@ header .contenedor :nth-child(8){
     height: 100%;
     object-fit: cover;
 }
+#contenedorEquipo{
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    column-gap: 2rem;
+
+}
+.clasePersona{
+    width: 90%;
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    row-gap: 1rem;
+    
+}
+.clasePersona .claseImagen{
+    width: 100%;
+    height: 350px;
+    position: relative;
+
+}
+
+.clasePersona .claseImagen :nth-child(1){
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    transition: 1s;
+
+}
+.clasePersona .claseImagen :nth-child(2){
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
+    transform:translate(-50%, -50%) scale(.7);
+    filter: sepia(1) opacity(.3);
+    transition: 1s;     
+}
+.clasePersona .claseImagen :nth-child(2):hover{
+    filter:sepia(0) opacity(.8);
+    transition: 1s;  
+}
+.clasePersona .claseImagen :nth-child(1):hover{
+    transform:rotate(40deg);
+    transition: 1s;  
+}
