--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,8 @@ h2{
     margin-top: 4rem;
 }
 h3{
+    width:100%;
+    text-align: left;
     color: var(--color1);
     font-size: 2rem;
     font-family: var(--fuente2);
@@ -106,7 +108,7 @@ section{
     margin-top: 2rem;
 }
 article{
-    margin-top: 1rem;
+    margin-top: 2rem;
     row-gap: 1rem;
 }
 .anchoEstrecho{
@@ -329,6 +331,7 @@ header .contenedor :nth-child(8){
 }
 .clasePersona .claseImagen{
     width: 100%;
+    min-width: 350px;
     height: 350px;
     position: relative;
 
@@ -358,4 +361,54 @@ header .contenedor :nth-child(8){
 .clasePersona .claseImagen :nth-child(1):hover{
     transform:rotate(40deg);
     transition: 1s;  
+}
+
+footer{
+    width: 100%;
+    background-color: var(--color2);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+
+}
+#ContentFooter{
+    width: 100%;
+    max-width: 2560 px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: flex-start;
+}
+#LogoFooter{
+    width: 300 px;
+
+}
+
+#AbajoFooter{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: flex-start;
+    row-gap: 1rem;
+    
+}
+#AbajoFooter p{
+    font-size: 1rem;
+}
+#SupFooter{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+}
+#SupFootwer .infoSupFooter{
+    width: 30%;
+    min-width: 300px;
+    height:400 px;
+    background-color: aquamarine;
 }
