--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,11 @@ h2{
     font-weight: 100;
     margin-top: 4rem;
 }
+@media only screen and (max-width:540px){
+    h2{
+        padding: 0 1rem;
+    }
+}
 h3{
     width:100%;
     text-align: left;
@@ -66,6 +71,12 @@ p{
     letter-spacing: 1px;
     line-height: 1.6rem;
 }
+@media only screen and (max-width:540px){
+    p{
+        padding: 0 1rem;
+    }
+}
+
 .boton{
     background-color:rgb(127, 193, 255);
     padding: 0.5rem 2rem;
@@ -115,6 +126,13 @@ article{
     max-width: 1200px;
     width: 95%;
 }
+/* SPAN */
+#toggle, .contenedor_span{
+display:none;
+}
+
+
+
 /* Nav */
 nav{
     position: fixed;
@@ -123,7 +141,6 @@ nav{
 nav .sup{
     width: 100%;
     height: 5vh;
-    max-height: 40px;
     background-color: var(--color0);
     display: flex;
     flex-direction: row;
@@ -140,7 +157,6 @@ nav .sup img{
 nav .inf{
     width: 100%;
     height: 5vh;
-    max-height: 40px;
     background-color: var(--color0);
     display: flex;
     flex-direction: row;
@@ -155,15 +171,76 @@ nav .inf ul{
     list-style: none; 
     column-gap: 4rem;
    }
-nav .inf a{
+nav .inf ul li a{
    text-decoration: none; 
 }
-nav .inf a:visited{
+nav .inf ul li a:visited{
     color: black;
 }
-nav .inf a:hover{
+nav .inf ul li a:hover{
     color: blue;
     font-weight: bold;
+}
+@media only screen and (max-width:540px){
+    .contenedor_span{
+        position: fixed;
+        top: 1rem;
+        right: 1rem;
+        z-index: 900;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        cursor: pointer;
+    }
+    .contenedor_span span{
+        width: 100%;
+        height: 3px;
+        background: var(--color1);
+        transition: all 250ms ease-out;
+        transform-origin: 0 0;
+    }
+    nav .sup{
+        height: 10vh; 
+    }
+    nav .inf{
+        position: relative;
+        left: 100%;
+        background-color: var(--color0);
+        top: 0;
+        width: 100%;
+        height: 90vh;
+        align-items: flex-start;
+        padding-top: 2rem;
+        transition: 0.5s;         
+             
+    }
+    nav .inf ul{
+        border-left: 2px solid var(--color3);
+        flex-direction: column;
+        row-gap: 2rem;
+        align-items: flex-start;
+        padding-left: 1rem;
+        font-size: 1.5rem;
+    }
+    nav .inf ul li a{
+        font-size: 2rem ;
+    }
+    #toggle:checked ~ .contenedor_span span:nth-last-child(1){
+        transform: rotate(-45deg) translate(-1px, 0px);
+    }
+    #toggle:checked ~ .contenedor_span span:nth-last-child(2){
+        transform: rotate(0deg) scale(0.2, 0.2);
+        opacity: 0;
+    }
+    #toggle:checked ~ .contenedor_span span:nth-last-child(3){
+        transform: rotate(45deg) translate(0px, -1px);
+    }
+    #toggle:checked ~ nav .inf{
+        left: 0;
+    }
+
 }
 
 /* Estilos del Header */
@@ -299,17 +376,30 @@ header .contenedor :nth-child(8){
     opacity: .5;
     cursor: pointer;    
 }
+
 #slider :nth-child(1){
     left: 2rem;
 }
 #slider :nth-child(2){
     right: 2rem;
 }
+@media only screen and (max-width:540px){
+    #slider :nth-child(1), #slider :nth-child(2){
+        width: 96px;
+    }
+    #slider :nth-child(1){
+        left: 1rem;
+    }
+    #slider :nth-child(2){
+        right: 1rem;
+    }
+}
 #fotoActiva{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+/* SECCION QUIENES SOMOS */
 #contenedorEquipo{
     width: 100%;
     display:flex;
@@ -317,6 +407,7 @@ header .contenedor :nth-child(8){
     justify-content: center;
     align-items: flex-start;
     column-gap: 2rem;
+    flex-wrap: wrap;
 
 }
 .clasePersona{
@@ -496,3 +587,4 @@ footer form input,textarea{
     transform: translateX(-50%);
 
 }
+
