--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,9 +76,13 @@ p{
         padding: 0 1rem;
     }
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
 
 .boton{
-    background-color:rgb(127, 193, 255);
+    background-color: var(--color0);
     padding: 0.5rem 2rem;
     border-radius: 0.5rem;
     border: 1px solid var(--color1);
@@ -137,6 +141,7 @@ display:none;
 nav{
     position: fixed;
     z-index: 100;
+    top: 0;
 }
 nav .sup{
     width: 100%;
@@ -149,7 +154,7 @@ nav .sup{
     position: relative;
 }
 nav .sup img{
-    height: 70px;
+    height: 63px;
     position: absolute;
     left: 1rem;
     top: 0.5rem;
@@ -172,13 +177,13 @@ nav .inf ul{
     column-gap: 4rem;
    }
 nav .inf ul li a{
-   text-decoration: none; 
+   color: var(--color1);
 }
 nav .inf ul li a:visited{
-    color: black;
+    color: var(--color1);
 }
 nav .inf ul li a:hover{
-    color: blue;
+    color: var(--color3);
     font-weight: bold;
 }
 @media only screen and (max-width:540px){
@@ -246,7 +251,7 @@ nav .inf ul li a:hover{
 
 /* Estilos del Header */
 header{
-    transform: translateY(80px);
+    margin-top: 70px;
     height: 90vh;
     background-image: url("../img/header_2560.jpg");
     background-size: cover;
@@ -266,6 +271,7 @@ header .contenedor{
     font-family: var(--fuente1);
     user-select: none;
     color: var(--color0);
+    transform: translateY(40px);
 
 }
 header .contenedor :nth-child(1){
@@ -333,7 +339,6 @@ header .contenedor :nth-child(8){
     flex-wrap: wrap;
 }
 #contenedorservicios .servicio{
-    background-color: bisque;
     width: 100%;
     max-width: 550px;
     min-width: 320px;
@@ -463,12 +468,67 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding: 2rem;
     color:var(--color0);
     font-family: var(--font1);
-    padding: 4rem 0;
+    padding: 4rem 2rem;
     row-gap: 2rem;
 }
+
+#contenedor_form{
+    width: 100%;
+    max-width: 2560px;
+    display:flex;
+    flex-direction: row;
+    
+    justify-content: center;
+    align-items: flex-end;
+    column-gap: 5rem;
+}
+#contenedor_form h2{
+    color: var(--color0);
+}
+#contenedor_form >img{
+    width: 40%;
+    height: 400px;
+    object-fit: cover;
+}
+footer form{
+    width: 40%;
+    min-width: 320px;
+    max-width: 800px;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    row-gap: 1rem;
+
+}
+footer form input,textarea{
+    width: 100%;
+    padding: 0.5rem 2rem;
+    font-size: 1.2rem;
+    font-family: var(--fuente2);
+}
+footer form textarea{
+    height: 100px;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 200px;
+    min-height: 100px;
+}
+#boton_enviar{
+    width: 10%;
+    min-width: 160px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+    padding: inherit;
+}
+
+
+
 #ContentFooter{
     width: 100%;
     max-width: 2560px;
@@ -481,23 +541,8 @@ footer{
 #ContentFooter >img{
     width: 150px;
 }
-#LogoFooter{
-    width: 150 px;
-}
-#AbajoFooter{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: flex-start;
-    row-gap: 0.1rem; 
-}
-#AbajoFooter p{
-    font-size: 1rem;
-}
 #SupFooter{
     width: 100%;
-    height: 300px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -507,7 +552,6 @@ footer{
 #SupFooter .infoSupFooter{
     width: 30%;
     min-width: 300px;
-    background-color: aquamarine;
     display:flex;
     flex-direction: column;
     align-items: flex-start;
@@ -515,7 +559,6 @@ footer{
     row-gap: 2rem;   
     
 }
-
 #SupFooter .infoSupFooter ul{
     list-style: none;
     display: flex;
@@ -538,6 +581,17 @@ footer{
     /* https://codepen.io/sosuke/pen/Pjoqqp */
     filter: invert(38%) sepia(11%) saturate(2641%) hue-rotate(313deg) brightness(99%) contrast(105%);
 }
+#AbajoFooter{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: flex-start;
+    row-gap: 0.1rem; 
+}
+#AbajoFooter p{
+    font-size: 1rem;
+}
 .iconos_contacto{
     width: 20px;
     filter:invert(1);
@@ -555,54 +609,5 @@ footer{
     width: 40px;
 }
 
-#contenedor_form{
-    width: 100%;
-    max-width: 2560px;
-    height: 400px;
-    background-color: aquamarine;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    column-gap: 5rem;
-}
-footer form{
-    width: 40%;
-    min-width: 320px;
-    max-width: 800px;
-    background-color: bisque;
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
 
-}
-footer form input,textarea{
-    width: 100%;
-    padding: 0.5rem 2rem;
-    font-size: 1.2rem;
-    font-family: var(--fuente2);
-}
-footer form textarea{
-    height: 100px;
-    max-width: 100px;
-    min-width: 100px;
-    max-height: 200px;
-    min-height: 100px;
-}
-footer form input{
-    height: 2rem;
-
-}
-
-#boton_enviar{
-    width: 10%;
-    min-width: 160px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-
-    padding: inherit;
-
-}
 
